envcrypt-test/tests/fixtures/invalid_syntax.rs
use envcrypt::envcrypt;

fn main() {
    envcrypt!("this" => "is", wrong)
}
